Switching to using bootstraps query-based mobile display as opposed to detecting the request - this will allow responsiveness in small browser windows or tablets that may not register as mobile.
Removed the bundler thing for compressing css - could you add an option that only does that in production or something?

--- a/templates/base.html
+++ b/templates/base.html
@@ -2,9 +2,9 @@
 {% import "bootstrap/google.html" as google %}
 
 {% block head %}
-{{super()}}
-<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
-{%- block js_header -%}{%- endblock -%}
+    {{super()}}
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
+    {%- block js_header -%}{%- endblock -%}
 {% endblock %}
 
 {% block title %}
@@ -12,70 +12,86 @@ refurence
 {% endblock %}
 
 {% block styles %}
-{{super()}}
-    {% assets filters="cssmin", output="gen/packed.css", "css/main.css" %}
-          <link rel="stylesheet" href="{{ ASSET_URL }}"/>
-    {% endassets %}
-  <style>
-  .content {padding-top: 80px;}
-  </style>
+    {{super()}}
+
+    <link rel="stylesheet" href="/static/css/main.css"/>
+
+    <link rel="stylesheet" href="/static/css/blueimp-gallery.min.css"/>
+    <link rel="stylesheet" href="/static/css/fontselect.css"/>
+
+    <link rel="stylesheet" href="/static/css/nav.css"/>
+
 {% endblock %}
 
-{% block body_attribs %}
-{% endblock %}
 
-{% macro render_navbar_links() %}
-{% block navbar_left_links %}{% endblock %}
-{% block navbar_right_links %}{% endblock %}
-<li> <a href="{{ url_for('index') }}">home</a></li>
-{% include "security/_menu.html" %}
-<li> <a href="{{ url_for('profiles.list', slug='examples') }}">examples</a></li>
-<li> <a href="{{ url_for('guides.list') }}">guides</a></li>
-<li> <a href="{{ url_for('public.about') }}">about</a></li>
-{% endmacro %}
 
 {% block navbar %}
-{% if request.MOBILE %}
-<nav class="navbar navbar-default navbar-static-top" role="navigation">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="{{url_for('index')}}">refurence</a>
-    </div>
+
+<nav class="navbar navbar-default navbar-fixed-top" id="main-nav">
+    <div class="container-fluid">
+
+        <div class="navbar-header">
+
+            <a class="navbar-logo" href="{{ url_for('index') }}">refurence</a>
+
+            <!-- Mobile toggle button -->
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav-mobile">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+
+        </div>
+
+        <!-- Nav links -->
+        <div class="collapse navbar-collapse" id="main-nav-mobile">
+
+            <!-- Left Links -->
+            <ul class="nav navbar-nav">
+                <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+                {% include "security/_menu.html" %}
+
+            </ul>
 
 
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse fill-solid" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-      {{ render_navbar_links() }}
-    </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
+            <!-- Right links -->
+            <ul class="nav navbar-nav navbar-right">
+
+                <li> <a href="{{ url_for('profiles.list', slug='examples') }}">examples</a></li>
+                <li> <a href="{{ url_for('guides.list') }}">guides</a></li>
+                <li> <a href="{{ url_for('public.about') }}">about</a></li>
+
+                <!--
+                <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+                    <ul class="dropdown-menu" role="menu">
+                        <li><a href="#">Action</a></li>
+                        <li><a href="#">Another action</a></li>
+                        <li><a href="#">Something else here</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">Separated link</a></li>
+                        <li class="divider"></li>
+                        <li><a href="#">One more separated link</a></li>
+                    </ul>
+                </li>-->
+            </ul>
+        </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
 </nav>
-{% endif %}
 {% endblock %}
 
 {% block content %}
-<!-- <div class="sidebar-nav" style="position:fixed; right:0; bottom:40%;"> -->
-{% if not request.MOBILE %}
-<div class="sidebar-nav" style="position:fixed; right:0; top:20%;">
-    <ul class="nav">
-      {{ render_navbar_links() }}
-    </ul>
-</div>
-{% endif %}
 {% endblock %}
 
-{% block scripts %}
-{{ super() }}
-{{google.analytics(account="UA-45952945-2")}}
-{% endblock %}
+
 
 {% block footer %}
+       <p>test</p>
+{% endblock %}
+
+
+{% block scripts %}
+    {{ super() }}
+    {{google.analytics(account="UA-45952945-2")}}
 {% endblock %}
