--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -1,8 +1,8 @@
 #main-nav {
-  background-color: rgba(169, 169, 169, 0.5); }
-
-#main-nav a {
-  color: #000;
-  font-weight: bold; }
+  background-color: rgba(169, 169, 169, 0.75); }
+  #main-nav a {
+    color: #000;
+    font-weight: bold;
+    text-shadow: 0px 0px 6px #fff; }
 
 /*# sourceMappingURL=nav.css.map */
