--- a/static/css/nav.scss
+++ b/static/css/nav.scss
@@ -1,12 +1,44 @@
 
+body {
+	padding-top: 50px;
+}
+
 #main-nav  {
 
-	background-color: rgba(169,169,169,.5);
+	background-color: rgba(200,200,200,.75);
+	font-family: "Cabin";
+	font-size: $font-medium;
+	border: none;
+	border-bottom: 1px solid #CCC;
 
+
+	a {
+		color: #000;
+		font-weight: bold;
+		text-shadow: 0px 0px 6px #fff;
+
+		&:hover {
+			background-color: rgba(255, 255, 255, .25);
+			color: darken($primary, 10);
+			text-shadow: none;
+		}
+	}
+
+	ul {
+		margin-left: 8px;
+	}
+
+	.navbar-logo {
+		font-family: "corben";
+		display: inline-block;
+		padding: 4px 0px;
+		text-decoration: none;
+		font-size: $font-large;
+
+		&:hover {
+			background-color: inherit;
+		}
+	}
 
 }
 
-#main-nav a {
-	color: #000;
-	font-weight: bold;
-}
