--- a/templates/guides/list.html
+++ b/templates/guides/list.html
@@ -1,12 +1,11 @@
 {% extends "guides/index.html" %}
 
 {% block content %}
-<div class="row">
-<div class="col-xs-1"></div>
-<div class="col-xs-10">
-     <div class="col-xs-12 blurred-sm" style="text-align:center;">
-	  <h1>refurence guides</h1>
-     </div>
+
+<div class="col-sm-8 col-sm-offset-2 content-box">
+
+	  <h1 class="text-center">refurence guides</h1>
+
      <div class="col-xs-12">
 	  <ul class="list-group">
 	       {% for guide in guides %}
