--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@ refurence
 
 {% block navbar %}
 
-<nav class="navbar navbar-default navbar-fixed-top" id="main-nav">
+<nav class="navbar navbar-default" id="main-nav">
     <div class="container-fluid">
 
         <div class="navbar-header">
@@ -34,7 +34,7 @@ refurence
             <a class="navbar-logo" href="{{ url_for('index') }}">refurence</a>
 
             <!-- Mobile toggle button -->
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#main-nav-mobile">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-xs">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -44,7 +44,7 @@ refurence
         </div>
 
         <!-- Nav links -->
-        <div class="collapse navbar-collapse" id="main-nav-mobile">
+        <div class="collapse navbar-collapse" id="">
 
             <!-- Left Links -->
             <ul class="nav navbar-nav">
@@ -85,7 +85,7 @@ refurence
 
 
 {% block footer %}
-       <p>test</p>
+
 {% endblock %}
 
 
