--- a/templates/profiles/detail.html
+++ b/templates/profiles/detail.html
@@ -39,9 +39,9 @@ style="background: {{ profile.bkg_color }}; background-size: cover;"
     <!-- main container -->
     {%- block maincontainer -%}
     {% if profile.sidebar.img_links %}
-        <div class="col-xs-10 fill" id="maincontainer">
+        <div class="col-xs-10 content-box" id="maincontainer">
     {% else %}
-        <div class="col-xs-12 fill" id="maincontainer">
+        <div class="col-xs-12 content-box" id="maincontainer">
     {% endif %}
     {%- endblock -%}
 
@@ -151,6 +151,7 @@ style="background: {{ profile.bkg_color }}; background-size: cover;"
 {% block scripts %}
 {{ super() }}
 <script src="//ajax.googleapis.com/ajax/libs/webfont/1.5.6/webfont.js"></script>
+
 <script>
   WebFont.load({
     google: {
