--- a/templates/security/index.html
+++ b/templates/security/index.html
@@ -15,8 +15,8 @@ Authentication
         {{ content }}
         {{ render_formcontent() }}
     {% else %}
-        <div class="col-xs-2"></div>
-        <div class="col-xs-8">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8">
         {{ content }}
         {{ render_formcontent() }}
         </div>
