--- a/templates/security/login_user.html
+++ b/templates/security/login_user.html
@@ -2,33 +2,33 @@
 
 {% extends "security/index.html" %}
 
+{% block title %}Login{% endblock %}
+
 {% macro social_login(provider_id, display_name) %}
-  <form action="{{ url_for('social.login', provider_id=provider_id) }}" method="POST">
+<form action="{{ url_for('social.login', provider_id=provider_id) }}" method="POST">
     <input type="submit" class="btn" value="Login with {{ display_name }}" />
-  </form>
+</form>
 {% endmacro %}
 
-{% block title %}
-Login
-{% endblock %}
 
 {% block form_content %}
-<div class="col-xs-12 blurred-sm" style="text-align:center;">
-  <h1>login</h1>
-</div>
-<div class="fill form">
-<a href="{{ url_for('security.forgot_password') }}">Forgot password</a>
-<form action="{{ url_for('security.login') }}" method="POST" name="register_user_form">
-    {{ login_user_form.hidden_tag() }}
 
-    {{ wtf.form_errors(login_user_form) }}
 
-    {{ wtf.form_field(login_user_form.email) }}
-    {{ wtf.form_field(login_user_form.password) }}
-    {{ wtf.form_field(login_user_form.remember) }}
-    {{ wtf.form_field(login_user_form.next) }}
-    {{ wtf.form_field(login_user_form.submit) }}
+<div class="content-box form">
+    <h1 class="text-center">login</h1>
+    <form action="{{ url_for('security.login') }}" method="POST" name="register_user_form">
+        {{ login_user_form.hidden_tag() }}
 
-</form>
+        {{ wtf.form_errors(login_user_form) }}
+
+        {{ wtf.form_field(login_user_form.email) }}
+        {{ wtf.form_field(login_user_form.password) }}
+        <a href="{{ url_for('security.forgot_password') }}">Forgot password</a>
+
+        {{ wtf.form_field(login_user_form.remember) }}
+
+        {{ wtf.form_field(login_user_form.submit) }}
+
+    </form>
 </div>
 {% endblock %}
